samples/_failures_safe/1761725505_2b5b14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a6b6033.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_8a6b6033.c:159:17: error: expected declaration or statement at end of input
  159 |                 printf("IDENTIFIER: %s\n", token->value);
      |                 ^~~~~~
./samples/SAFE/__tmp_8a6b6033.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a6b6033.c:159:17: error: expected declaration or statement at end of input
